Bug 129380 - Typing using a hardware keyboard shows a "helper bar" from the OS in the iOS app
Summary: Typing using a hardware keyboard shows a "helper bar" from the OS in the iOS app
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other iOS
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-13 16:27 UTC by Nicolas Christener
Modified: 2020-03-31 21:03 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Printscreen showing the issue (753.93 KB, image/png)
2019-12-13 16:29 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-12-13 16:27:06 UTC
Description:
When using a hardware keyboard to type text in the iOS app the OS will display a "helper bar" containing some not really useful functions.

The OS provided bar overlaps the status bar provided by the app and is just plain annoying.

The OS provided bar should either not show up or push the status bar of the app over the OS bar.

Steps to Reproduce:
1. Create/open a writer document using the iOS app
2. Type some text using a hardware keyboard

Actual Results:
An OS provided helper bar shows up at the bottom of the app.

Expected Results:
The OS provided helper bar should not show up or at least not overlap the status bar provided by the app.


Reproducible: Always


User Profile Reset: No



Additional Info:
Tested with 4.2 (25) on iOS 13.3.x
Comment 1 Nicolas Christener 2019-12-13 16:29:01 UTC
Created attachment 156564 [details]
Printscreen showing the issue
Comment 2 Xisco Faulí 2019-12-16 18:37:13 UTC
Moving to NEW
Comment 3 How can I remove my account? 2019-12-18 13:18:16 UTC
Possibly this helps, maybe the bar is what is called "accessory bar"? https://stackoverflow.com/questions/32546394/hiding-keyboard-accessorybar-in-wkwebview
Comment 4 How can I remove my account? 2019-12-19 13:29:25 UTC
Nah, that did not work. I also tried replacing the WKWebView object's class with one where inputAssistantItem returns nil.
Comment 5 How can I remove my account? 2019-12-19 13:31:06 UTC
(The bar is what calling [self.webview inputAssistantItem] in our DocumentViewController's viewDidLoad returns, i.e. an UITextInputAssistantItem.)
Comment 7 How can I remove my account? 2020-01-31 14:14:23 UTC
Suggested fix in https://gerrit.libreoffice.org/c/online/+/87769
Comment 8 Commit Notification 2020-01-31 14:53:49 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/online/commit/56d310636db734edcef75b07d266b93007472c45

tdf#129380: Don't show the "shortcut bar" if a hardware keyboard is used
Comment 9 Nicolas Christener 2020-01-31 16:25:23 UTC
Lovely!! Thanks Tor/Kendy looking very much forward to the next build :)
Comment 10 Nicolas Christener 2020-01-31 21:06:30 UTC
Fixed in 4.2 (35)

Thanks a lot to the Collabora team and especially Tor and Kenny for taking care of this!
Comment 11 Aron Budea 2020-03-31 21:03:34 UTC
Let's close as FIXED, then.